fdo#72226: Fix for Stock chart Invalid RT

Issue :
    In chart1.xml,
       <c:chart>
        <c:plotArea>
         <c:stockChart>
    there are four types of series as Open,Low,High
    and Close.

    For Open series,
      <c:ser>
       <c:idx val="0" />
       <c:order val="0" />
    an attribute "val" should be 1 and not 0.
    i.e. index should start from 1 and not from 0.

  Implementation :
    - In ChartExport::exportCandleStickSeries(),
      Using idx variable, we are writing index value
      which should be greater than 0. So for idx=0,
      we are adding value 1 while writing index value.
    - Added Unit tese case for chart export

Conflicts:
	chart2/qa/extras/chart2export.cxx

Change-Id: I4d5ffefbc8fcf62b50c13ca1b3ed80290962fc4e
Reviewed-on: https://gerrit.libreoffice.org/6925
Tested-by: Norbert Thiebaud <nthiebaud@gmail.com>
Reviewed-by: Norbert Thiebaud <nthiebaud@gmail.com>